--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js",
+    "start": "nodemon dist/app.js",
     "dev": "ts-node-dev --respawn --transpile-only app.ts",
-    "build": "tsc --watch",
+    "build": "tsc", 
     "restart": "pm2 restart app",
     "delete": "pm2 delete app",
     "logs": "pm2 logs",
