--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,18 @@
   "name": "Video Finding Application",
   "version": "1.0.0",
   "description": "A website for trading NFT",
-  "main": "src/app.js",
+  "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon dist/app.js",
-    "dev": "ts-node-dev --respawn --transpile-only app.ts",
-    "build": "tsc", 
+    "dev": "nodemon --exec ts-node app.ts",
+    "build": "tsc",
     "restart": "pm2 restart app",
     "delete": "pm2 delete app",
     "logs": "pm2 logs",
     "status": "pm2 logs app",
-    "stop": "pm2 stop app"
+    "stop": "pm2 stop app",
+    "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts"
   },
   "author": "Mbonu Chinedum",
   "license": "UNLICENSED",
@@ -54,6 +55,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.10"
+    "@types/morgan": "^1.9.10",
+    "ts-node-dev": "^2.0.0"
   }
 }
