added relative imports for the react-app

--- a/myapp/package.json
+++ b/myapp/package.json
@@ -19,12 +19,12 @@
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+"scripts": {
+  "start": "react-app-rewired start",
+  "build": "react-app-rewired build",
+  "test": "react-app-rewired test",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -45,7 +45,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "customize-cra": "^1.0.0",
     "postcss": "^8.5.6",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.0.23"
   }
 }
